tzchat: Add SSL support
Signed-off-by: Dowland Aiello <dowlandaiello@gmail.com>

--- a/static/index.html
+++ b/static/index.html
@@ -1,3 +1,12 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en-US">
+<head>
+	<meta charset="UTF-8">
+	<title>TZHS Student-Only Chat</title>
+</head>
+<body>
+<script type="application/javascript">
+	const sock = new WebSocket("ws://localhost:8080/ws/");
+</script>
+</body>
 </html>
