static: Users can now register + select aliases
Selections page is modular, so the same process can be used to select + create rooms (although I have yet to implement creating rooms as a server-side command).

Signed-off-by: Dowland Aiello <dowlandaiello@gmail.com>

--- a/static/index.html
+++ b/static/index.html
@@ -20,15 +20,16 @@
 		</div>
 	</template>
 	<template id="modal">
-		<div class="modal-wrapper">
+		<div class="modal-wrapper" id="some-id">
 			<div class="modal">
 				<div class="nav-section">
 					<h1 id="title">Choices</h1>
-					<span class="material-icons">close</span>
+					<span class="material-icons close-button">close</span>
 				</div>
 				<div class="choices">
 					<p id="choice"></p>
 				</div>
+				<p class="modal-note">All messages are anonymous, but will be sent under your chosen username. A username can be owned by only one @stu.soscd.org email. You may claim as many usernames as necessary.</p>
 			</div>
 		</div>
 	</template>
