tzchat: HOLY SHIT THIS UI IS FUCKING GODLIKE
Signed-off-by: Dowland Aiello <dowlandaiello@gmail.com>

--- a/static/index.html
+++ b/static/index.html
@@ -46,7 +46,7 @@
 	<div id="messagesHolder">
 	</div>
 	<div class="input-section">
-		<input type="text" placeholder="Send a message" id="msgCts"></input>
+		<textarea type="text" placeholder="Send a message" id="msgCts"></textarea>
 		<div class="send-button" id="sendMsg">
 			<span class="material-icons">send</span>
 		</div>
