tzchat: Work on group DMs
Signed-off-by: Dowland Aiello <dowlandaiello@gmail.com>

--- a/static/index.html
+++ b/static/index.html
@@ -26,6 +26,8 @@
 					<h1 id="title">Choices</h1>
 					<span class="material-icons close-button">close</span>
 				</div>
+				<div class="side-by-side">
+				</div>
 				<div class="choices">
 					<p id="choice"></p>
 				</div>
